--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "nodebb-theme-vanilla",
-  "version": "11.1.16",
-  "description": "Vanilla theme for NodeBB",
-  "main": "theme.less",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NodeBB/nodebb-theme-vanilla"
+  "_from": "nodebb-theme-vanilla@11.1.16",
+  "_id": "nodebb-theme-vanilla@11.1.16",
+  "_inBundle": false,
+  "_integrity": "sha512-MLlhCWGqMZYEsO1CAcRdorCFsOdijhpoMUrZnsnIK+tKQAEazGNohrrElQy8+Rwf864V16F/tKUSm/MFe9uMaw==",
+  "_location": "/nodebb-theme-vanilla",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "nodebb-theme-vanilla@11.1.16",
+    "name": "nodebb-theme-vanilla",
+    "escapedName": "nodebb-theme-vanilla",
+    "rawSpec": "11.1.16",
+    "saveSpec": null,
+    "fetchSpec": "11.1.16"
   },
-  "keywords": [
-    "nodebb",
-    "theme",
-    "themes",
-    "bootstrap",
-    "vanilla"
+  "_requiredBy": [
+    "/"
   ],
+  "_resolved": "https://registry.npmjs.org/nodebb-theme-vanilla/-/nodebb-theme-vanilla-11.1.16.tgz",
+  "_shasum": "d4a7f14882471704cf55346f2d4eb0fb3e827a6f",
+  "_spec": "nodebb-theme-vanilla@11.1.16",
+  "_where": "/home/nodebb/nodebb",
+  "bugs": {
+    "url": "https://github.com/NodeBB/nodebb-theme-vanilla/issues"
+  },
+  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Andrew Rodrigues",
@@ -31,11 +43,25 @@
       "url": "https://github.com/barisusakli"
     }
   ],
+  "deprecated": false,
+  "description": "Vanilla theme for NodeBB",
+  "homepage": "https://github.com/NodeBB/nodebb-theme-vanilla#readme",
+  "keywords": [
+    "nodebb",
+    "theme",
+    "themes",
+    "bootstrap",
+    "vanilla"
+  ],
   "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/NodeBB/nodebb-theme-vanilla/issues"
-  },
+  "main": "theme.less",
+  "name": "nodebb-theme-vanilla",
   "nbbpm": {
     "compatibility": "^1.13.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NodeBB/nodebb-theme-vanilla.git"
+  },
+  "version": "11.1.16"
 }
